--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@
   body {
     background-color: #000;
     color: #bffcff;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: 'Noto Sans', sans-serif;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -21,7 +21,7 @@
     width: 100%;
   }
   
-  /* 🔄 Updated: replacing text logo with image logo */
+  /* Logo image style */
   .logo-img {
     width: 70px;
     height: 70px;
