--- a/styles.css
+++ b/styles.css
@@ -76,8 +76,14 @@
   }
   
   .footer span {
-    font-weight: bold;
+    font-family: 'Noto Sans', sans-serif;
+    font-weight: 900;
+    font-size: 1.6rem;
+    letter-spacing: 1px;
+    color: #fff;
+    text-transform: uppercase;
   }
+  
   
   @media (max-width: 600px) {
     .description,
